// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. secondary two no pic and two - small 1`] = `
<div>
  <div>
    secondary-1
  </div>
  <div />
  <div>
    secondary-2
  </div>
  <div />
  <div>
    support-1
  </div>
  <div />
  <div>
    support-2
  </div>
</div>
`;

exports[`2. secondary two no pic and two - medium 1`] = `
Array [
  <div>
    <div>
      <div>
        secondary-1
      </div>
    </div>
    <div />
    <div>
      <div>
        secondary-2
      </div>
    </div>
  </div>,
  <div />,
  <div>
    <div>
      <div>
        support-1
      </div>
    </div>
    <div />
    <div>
      <div>
        support-2
      </div>
    </div>
  </div>,
]
`;
